Changes before error encountered
Agent-Logs-Url: https://github.com/wuwen5/xxl-job-lite/sessions/99284039-f208-4144-b410-7b39fe6d6353